- mobile view fixes - added footer to the bottom of the info page [only on mobile] - fit the filter search form to mobile size

--- a/src/app/component/pokemon-card /pokemon-card.component.scss
+++ b/src/app/component/pokemon-card /pokemon-card.component.scss
@@ -388,4 +388,11 @@ h2{
       margin-top: 0.5rem;
     }
   }
+  .pokemon-card-info{
+    margin-right: 10%;
+    margin-left: 10%;
+  }
+  .pokemon-card__description{
+    width: 100%;
+  }
 }
